wip: cleanup in solution